k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dockmaster
  labels:
    name: dockmaster
    app: dockmaster
